# ModernCMakeExamples

./: README.md
MultiProjectStaticLibs/: CMakeLists.txt
MultiProjectStaticLibs/HelloLib/: CMakeLists.txt
MultiProjectStaticLibs/HelloLib/include/HelloLib/: Hello.h
MultiProjectStaticLibs/HelloLib/src/: Hello.cpp
MultiProjectStaticLibs/MyExecutable/: CMakeLists.txt
MultiProjectStaticLibs/MyExecutable/src/: MyExecutable.cpp  MyExecutable.h
MultiProjectStaticLibs/StringTransformerLib/: CMakeLists.txt
MultiProjectStaticLibs/StringTransformerLib/include/StringTransformerLib/: StringTransformer.h
MultiProjectStaticLibs/StringTransformerLib/src/: StringTransformer.cpp
